// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dialog Dialog Helper 1`] = `
<button
  aria-disabled={false}
  className="button button-primary button-medium pill-shape"
  defaultChecked={false}
  disabled={false}
  onClick={[Function]}
>
  <span
    className="button-text-medium"
  >
    Open dialog
  </span>
</button>
`;

exports[`Storyshots Dialog Medium 1`] = `
<button
  aria-disabled={false}
  className="button button-primary button-medium pill-shape"
  defaultChecked={false}
  disabled={false}
  onClick={[Function]}
>
  <span
    className="button-text-medium"
  >
    Open dialog
  </span>
</button>
`;

exports[`Storyshots Dialog Small 1`] = `
<button
  aria-disabled={false}
  className="button button-primary button-primary-disruptive button-medium pill-shape"
  defaultChecked={false}
  disabled={false}
  onClick={[Function]}
>
  <span
    className="button-text-medium"
  >
    Open dialog
  </span>
</button>
`;
